# pidgin-osd

./: FAQ  Makefile.am  NEWS  README  THANKS  TODO  configure.ac
src/: Makefile.am  pidgin-osd.c
